<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/btn_lvl_test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_lvl_easy"
        />

    <Button
        android:id="@+id/btn_lvl_test"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/test"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_lvl_easy"
        />

    <Button
        android:id="@+id/btn_lvl_easy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/easy"
        android:textSize="24sp"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_lvl_test"
        app:layout_constraintTop_toTopOf="@+id/btn_lvl_test" />

    <Button
        android:id="@+id/btn_lvl_medium"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:text="@string/medium"
        android:textSize="24sp"
        android:textStyle="bold"
        android:backgroundTint="@color/buttons"
        app:layout_constraintStart_toStartOf="@id/btn_lvl_test"
        app:layout_constraintTop_toBottomOf="@id/btn_lvl_test" />

    <Button
        android:id="@+id/btn_lvl_hard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/hard"
        android:textSize="24sp"
        android:textStyle="bold"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@id/btn_lvl_easy"
        app:layout_constraintTop_toTopOf="@id/btn_lvl_medium"
        />

</androidx.constraintlayout.widget.ConstraintLayout>